--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 <style>
+a{
+text-decoration:none;
+}
 body{
 background-color:#333054;
 }
@@ -24,13 +30,13 @@ text-align: center;
 
 }
 td {
-background-color:#e1e0fc;
+background-color:#cccccc;
 border: 1px solid #ccc;
 border-radius: 5px;
 width:33%;
 text-align: center;
 }
-td:hover {background-color: #efefef;
+td:hover {background-color: #8d92d3;
 }
 p {
     font-family: 'Open Sans Condensed', sans-serif;
@@ -48,35 +54,40 @@ p {
 </style>
 
 </head>
-<body>
-<div id="main_image">
-<img src="EGZELTICS (WHITE).png" width="35%">
-<p> Welcome To My Site </p>
-<p id="edm_text"> I'm an Electronic Dance Producer and Former Ghost Producer. </p>
+<body>  
+ <div class="w3-container w3-center w3-animate-opacity">
+	<div id="main_image">
+	<img src="EGZELTICS (WHITE).png" width="35%">
+	<p> Welcome To My Site </p>
+	<p id="edm_text"> I'm an Electronic Dance Producer and Former Ghost Producer. </p>
 
+	</div>
+
+	<table id="section_container" cellspacing="5">
+
+		<tr>
+		<td>
+			<iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fegzeltics&color=orange_white&size=40" style="width: 40px; height: 40px;"></iframe>
+			<p> Soundcloud </p>
+		</td>
+
+	
+		<td>
+			<a href="https://twitter.com/egzeltics" target="_blank"> 
+			<img src="Twitter_Logo_White_On_Blue.png" height="40" width="40">
+			<p> Twitter </p> 
+			</a>
+		</td>
+		<td>
+			<a href="https://www.facebook.com/egzelticstunes/?hc_ref=PAGES_TIMELINE" target="_blank">
+			<img src="facebook logo png.png" height="40" width="40">
+			<p> Facebook </p> 
+			</a>
+		</td>
+
+		</tr>
+	</table>
 </div>
-
-<table id="section_container" cellspacing="5">
-
-<tr>
-<td>
-<iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fegzeltics&color=orange_white&size=40" style="width: 40px; height: 40px;"></iframe>
-</td>
-
-<td>
-<a href="https://twitter.com/egzeltics" target="_blank"> 
-<img src="Twitter_Logo_White_On_Blue.png" height="40" width="40"> 
-</a>
-</td>
-<td>
-<a href="https://www.facebook.com/egzelticstunes/?hc_ref=PAGES_TIMELINE" target="_blank">
-<img src="facebook logo png.png" height="40" width="40"> 
-</a>
-</td>
-
-</tr>
-</table>
-
 
 
 
