--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ p {
 	<div id="main_image">
 	<img src="EGZELTICS (WHITE).png" width="35%">
 	<p> Welcome To My Site </p>
-	<p id="edm_text"> I'm an Electronic Dance Producer and Former Ghost Producer. </p>
+	<p id="edm_text">  Electronic Dance Producer and Former Ghost Producer. </p>
 
 	</div>
 
